[package]
name = "mssql"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tiberius = "*"
tokio = { version = "*", features = ["full"] }
tokio-util={ version = "*", features = ["full"] }
bytes="*"
crossterm = { version="*", features = ["event-stream"]  }
parking_lot="*"
static_vcruntime = "1.5"
#These dependencies used for parsing configuration files
serde_derive = "*"
serde="*"
toml="*"
#Hash calculation
sha2="*"