[package]
name = "siem-db-connector"
version = "0.1.0"
edition = "2021"
license = "Apache License 2.0"
description="Reading SQL database data and forward it as an event on UDP socket."


[features]
default = ["async_rotation", "vendored"]
#Used for log4rs logging
async_rotation = ["log4rs/async_rotation"]
#Force openssl-sys to staticly link in the openssl library. Necessary when
#cross compiling to x86_64-unknown-linux-musl.
vendored = ["openssl-sys/vendored"]

[patch.crates-io]
log4rs = { git = "https://github.com/yakov-bakhmatov/log4rs", branch = "async-rotation" }

[dependencies]
tiberius = { version = "*", features = ["chrono"] }
tokio = { version = "*", features = ["full"] }
tokio-util={ version = "*", features = ["full"] }
futures = "0.3.21"
bytes="*"
crossterm = { version="*", features = ["event-stream"]  }
#parking_lot="*"
static_vcruntime = "1.5"
#These dependencies used for parsing configuration files
serde_derive = "*"
serde="*"
toml="*"
#Hash calculation
sha2="*"
serde_json="*"

#Logging
log="0.4"
log4rs="0.10"
byte-unit = "4.0.14"


#tiberius datetime type conversion
chrono = "0.4.19"
date_time = "2.2.0"


#validation
validator = { version = "0.14", features = ["derive"] }
regex = "1.5.5"

#being able to use global var.
lazy_static = "1.4.0"

# Add openssl-sys as a direct dependency so it can be cross compiled to
# x86_64-unknown-linux-musl using the "vendored" feature below
openssl-sys = "*"

#CSV writing
csv = "1.1.6"